<resources>
    <string name="app_name">Love Test</string>
    <string name="title_home">Home</string>
    <string name="title_history">History</string>
    <string name="title_on_board">OnBoard</string>
    <string name="person_1">Person 1</string>
    <string name="person_2">Person 2</string>
    <string name="calculate">Calculate</string>
    <string name="love">love</string>
    <string name="skip">Skip</string>
    <string name="history">History</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_100">100%</string>
    <string name="result">result</string>
    <string name="next">Next</string>
    <string name="title">Title</string>
    <string name="_99">99</string>
    <string name="percent_key">%</string>
</resources>