<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.lovetest.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.example.lovetest.ui.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/navigation_on_boarding"
        android:name="com.example.lovetest.ui.onBoarding.OnBoardingFragment"
        android:label="@string/title_on_board"
        tools:layout="@layout/fragment_on_boarding" />

    <fragment
        android:id="@+id/navigation_result"
        android:name="com.example.lovetest.ui.result.ResultFragment"
        android:label="fragment_result"
        tools:layout="@layout/fragment_result" />
</navigation>