<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="4dp"
    android:layout_marginVertical="4dp"
    android:elevation="8dp"
    app:cardCornerRadius="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#544F289E"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/person_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/person_1"
            android:textSize="@dimen/text_size_16"
            app:layout_constraintBottom_toTopOf="@id/percent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <TextView
            android:id="@+id/percent_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_99"
            android:textSize="@dimen/text_size_16"
            app:layout_constraintBaseline_toBaselineOf="@id/percent"
            app:layout_constraintEnd_toStartOf="@+id/percent" />

        <TextView
            android:id="@+id/percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/percent_key"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:text="@string/percent_key"
            android:textSize="@dimen/text_size_16"
            app:layout_constraintBaseline_toBaselineOf="@id/percent"
            app:layout_constraintStart_toEndOf="@id/percent" />


        <TextView
            android:id="@+id/person_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/person_2"
            android:textSize="@dimen/text_size_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/percent" />

        <TextView
            android:id="@+id/result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="4dp"
            android:paddingBottom="20dp"
            android:text="@string/result"
            android:textAlignment="center"
            android:textSize="@dimen/text_size_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/person_2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>