<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_heart"
    android:paddingVertical="32dp"
    android:paddingHorizontal="16dp"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/tv_person_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="8dp"
        android:text="@string/person_1"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/et_first"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:maxEms="24"
        android:maxLength="24"
        android:id="@+id/et_first"
        android:layout_width="180dp"
        android:layout_height="48dp"
        android:autofillHints=""
        android:background="@drawable/et_background"
        android:inputType="textPersonName"
        android:paddingHorizontal="16dp"
        android:textColor="@color/names"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/tv_love"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="LabelFor" />

    <EditText
        android:maxEms="24"
        android:maxLength="24"
        android:id="@+id/et_second"
        android:layout_width="180dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:autofillHints="name"
        android:background="@drawable/et_background"
        android:inputType="textPersonName"
        android:paddingHorizontal="16dp"
        android:textColor="@color/names"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_person_two"
        tools:ignore="LabelFor" />


    <TextView
        android:id="@+id/tv_person_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/person_2"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_love" />

    <TextView
        android:id="@+id/tv_love"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingVertical="16dp"
        android:text="@string/love"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/names"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:paddingHorizontal="48dp"
        android:text="@string/calculate"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="italic"
        app:cornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_second" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_history"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:backgroundTint="#8048D5"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:padding="0dp"
        app:icon="@drawable/baseline_history_24"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:iconSize="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.Button.Circle" />
</androidx.constraintlayout.widget.ConstraintLayout>